ready for anna's final touch

--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -50,7 +50,7 @@
 \noindent \textbf{This needs to be a lot clearer and a lot more convincing. You may be resolving this eventually in (3). It is unclear there, however, whether you want all the characteristics of the synthetic group to be the same or just for the one specific j, which you are seeking to forecast in (1). To me, it makes more sense that they are all the
 same (if possible: is it? Comment on that!).}
 
-\noindent \textit{Response.} We now thoroughly comment on this in Section~\ref{section:synthetic}, where we detail the construction of the synthetic cohorts. As you point out, it makes more sense to construct one synthetic control group and one synthetic treatment group for doing the analysis across all of the outcomes. That is what we do.
+\noindent \textit{Response.} We now thoroughly comment on this in Section~\ref{section:cbamethodology}, where we detail the construction of the synthetic cohorts. As you point out, it makes more sense to construct one synthetic control group and one synthetic treatment group for doing the analysis across all of the outcomes. That is what we do.
 
 \noindent \textbf{Editor. Connected to that: I found assumption A-1 on pg.\ 18 mystifying. It may actually be unfortunate that you ``suppress individual i subscripts'' to ``avoid notational clutter'', as you state on p. 16. I thought that the explanation on pg.\ 15 and (3) meant, that you take each individual of your actual sample and ``match him/her'' up with someone in the auxiliary sample, who has the exact same vector of characteristics Y until age a* (which then raises a bunch of questions: what, if there are many in the artificial data that do the trick? What, if there are none?). So, you then would have an auxiliary sample, that looks like your experimental sample, but where you can observe everything until the end of their lives. If that is what you do, then A-1 is not an assumption: it is a definition of the auxiliary sample.} 
 
@@ -58,7 +58,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{And if that is not the definition, then exactly what is the definition? In any case, assumption A-2 on p.21 states some support condition. It would seem to me that this is a necessary condition to even construct the auxiliary sample, as defined by ``assumption'' A-1. Perhaps you mean something else, but this should all be crystal clear. Moreover, the selection of variables is really key. Suppose you include cohort information in the regressors in (1): then, assumption A-2 would be impossible to satisfy. There is too much crucial information here, swept under the rug of apparently clean formalism.}
 
-\noindent \textit{Response.} The selection of variables is in fact key, and we have generated two subsections to discuss this and explain how we put it in practice. These are in Sections~\ref{section:synthetic} and~\ref{section:inputs}.
+\noindent \textit{Response.} The selection of variables is in fact key, and we have generated two subsections to discuss this and explain how we put it in practice. These are in Section~\ref{section:cbamethodology}.
 
 \noindent \textbf{Editor. A key concern that I do not see discussed early on and with great care is that ``different times are different''. Suppose, say, that Y contains labor income, measured in year-2000 dollars. Suppose I wanted to use your methodology to also say something about great-great-grandkids, and therefore tried to find a matching sample of people, where I have data for their next four generations. I probably would have to go back more than 100 years. But then someone with the labor income of a contemporary lower middle class person would be considered filthy rich back then! They surely wouldn't be comparable! The issue may be less pronounced here, since the difference in birth year is perhaps just 20 or 30 years (how much, actually?), but still. You might be able to finesse this by just looking at income growth rates (since, once again, we are ultimately only interested in the difference between the treated and the non-treated groups). But still, one might need to worry about ``macro developments'' here. Crime rates may have changed. Female labor force participation, divorce rates, unemployment rates: they all changed. Perhaps, the identifying assumption here is that these affected the treated and non-treated groups the same, so that these macro effects disappear, once differencing or so. But shouldn't that be clearly spelled out and clearly argued? You ``hide'' all that with ``Condition C-1'', but as I just described with my great-great- grandkids example, this can be a pretty ridiculous condition for certain lists of outcomes. The selection of outcomes (e.g.: level of income or growth of income or income relative to the average U.S. income?) is really key! Don't hide that behind too much formalism, discuss this clearly and upfront. At this point, it is hard to be convinced that what you do is legit.}
 
@@ -139,7 +139,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor. pg.\ 16, ``There is close agreement of the constructed profiles within the age group of the experimental sample.'' See my main comment 3: if the constructed profile is obtained per matching the profile within the age group of the experimental sample, isn't this then a tautological statement? The same holds for the next paragraph. I.e., what, precisely, is used for construction, and what is the independent verification here? This is very unclear.}
 
-\noindent \textit{Response.} The explanation that we gave before failed to communicate why the fact that the constructed profiles match is important. To explain this, we refer to the recipe that we provide on pgs.\ 8 and 9. One thing is: obtain samples that resemble our treatment and control groups at baseline, or what we call constructing synthetic cohorts. The other thing is: using these samples to identify and estimate structural relationships and form a forecast. The reason why Figure~\ref{figure:controltests} is a compelling revision of our methodology is because in the auxiliary sample there is no treatment at all (everyone who satisfies $\bm{B} \in \mathcal{B}_0$ is observationally equivalent to a control-group child). Thus, our forecast for the average profile for the control group should be the same as the average profile for people who satisfy $\bm{B} \in \mathcal{B}_0$ in the auxiliary sample. We elaborate on this in Section~\ref{section:synthetic}.
+\noindent \textit{Response.} The explanation that we gave before failed to communicate why the fact that the constructed profiles match is important. To explain this, we refer to the recipe that we provide on pgs.\ 8 and 9. One thing is: obtain samples that resemble our treatment and control groups at baseline, or what we call constructing synthetic cohorts. The other thing is: using these samples to identify and estimate structural relationships and form a forecast. The reason why Figure~\ref{figure:controltests} is a compelling revision of our methodology is because in the auxiliary sample there is no treatment at all (everyone who satisfies $\bm{B} \in \mathcal{B}_0$ is observationally equivalent to a control-group child). Thus, our forecast for the average profile for the control group should be the same as the average profile for people who satisfy $\bm{B} \in \mathcal{B}_0$ in the auxiliary sample. We elaborate on this in Section~\ref{section:cbamethodology}.
 
 \noindent \textbf{Editor. On pg.\ 20 and just above Assumption A-1, Y now suddenly has five subscripts, when it only had three before, and the common subscripts are in a different order. I find that confusing. You then get to equation (3), and now there are four subscripts. This is not a compromise: this is even more confusing.}
 
@@ -147,7 +147,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor.  pg.\ 24: Assumption A-4 feels a bit odd. The notation is general enough that both d and k could be components of x. If one had a phi, which did not depend on it, then one could construct a new one, which did, switching between the ``old'' values, in dependence on d and k, and proceed with that. Is Theorem 1 then still valid? Perhaps something else is meant.}
 
-\noindent \textit{Response.} Let us clarify this because it is at the heart of our methodology. What we mean is that \textit{both} belonging to the experimental and non-experimental samples and treatment or control status could be summarized by $\bm{x}$ and $\bm{b}$. That is, the realization of an outcome of interest could be backed out from the realizations of $\bm{x}$ and $\bm{b}$. That is why it is crucial for us to document that treatment is in fact operating on $\bm{x}$ and that $\phi \left( \cdot, \bm{b} \right)$ is a non-trivial function of $\bm{x}$, which we document in Section~\ref{section:inputs}. If $\bm{x}$ and $\bm{b}$ summarize membership to either the experimental or the non-experimental sample and treatment status, then there is no $\phi_{k,j}^d$ for $d=0,1$ and $k = e,n$ but one and only one \textit{invariant} $\phi$.
+\noindent \textit{Response.} Let us clarify this because it is at the heart of our methodology. What we mean is that \textit{both} belonging to the experimental and non-experimental samples and treatment or control status could be summarized by $\bm{x}$ and $\bm{b}$. That is, the realization of an outcome of interest could be backed out from the realizations of $\bm{x}$ and $\bm{b}$. That is why it is crucial for us to document that treatment is in fact operating on $\bm{x}$ and that $\phi \left( \cdot, \bm{b} \right)$ is a non-trivial function of $\bm{x}$, which we document in Section~\ref{section:cbamethodology}. If $\bm{x}$ and $\bm{b}$ summarize membership to either the experimental or the non-experimental sample and treatment status, then there is no $\phi_{k,j}^d$ for $d=0,1$ and $k = e,n$ but one and only one \textit{invariant} $\phi$.
 
 \noindent \textbf{Editor. pg.\ 27: the notes to table 2 contain a model. That really should be part of the main text or appendix (or technical appendix): it feels odd to explain it there.}
 
@@ -165,7 +165,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Referee 1. Second, this paper unduly relies on citation of the authors' own unpublished analyses and sometimes the unpublished work of others. This is not necessary in most cases. The authors fail to cite in the appropriate locations the peer-reviewed publication(s) that make(s) the same point about many foundational issues, such as the study's original design and prior seminal findings. For example, the fact that the children in the control condition were not prevented from attending center-based childcare in the community appears in major prior articles and the benefits of this intermediate, non-randomized treatment ``substitute" has been effectively documented (notably, \citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}). Why would the authors cite an unpublished source of their own (specifically, \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}, unpublished) for this fact? Actually, the \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} is cited so often that one wonders how much it overlaps with this paper and what is needed from that not readily available paper to understand this current paper? This strongly detracts from the current paper.}
 
-\noindent \textit{Response.} This point is very well taken and we made an effort to: (i) cite \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} only when necessary. Before, it was cited over 10 times. Now, it is cited in the introduction once to state the difference between that paper and this paper per the editor's request, and three times within the same section, Section~\ref{section:cbaresultscont}, in which we concretely point to some results and references from that paper that are useful here; and (ii) rely on sources that are primary to the facts that we intend to document or refer to. Examples of these appear mostly when we discuss the content of the program in Section~\ref{section:background}. We refer to:
+\noindent \textit{Response.} This point is very well taken and we made an effort to: (i) cite \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} only when necessary. Before, it was cited over 10 times. Now, it is cited in the introduction once to state the difference between that paper and this paper per the editor's request. We concretely point to some results and references from that paper that are useful here; and (ii) rely on sources that are primary to the facts that we intend to document or refer to. Examples of these appear mostly when we discuss the content of the program in Section~\ref{section:background}. We refer to:
 
 \begin{enumerate}
 \item \citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} and other contemporaneous sources when discussing the take-up of alternative childcare arrangements by the control group. 
@@ -227,7 +227,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Referee 3. Appendix~\ref{appendix:methodology} is important, and much of it is necessary to understand what you actually do, and the pros and cons of alternative approaches.}
 
-\noindent \textit{Response.} We moved the crucial ingredients of Appendix~\ref{appendix:methodology} into the text. In particular, after listing each of the components in our forecasting procedure on pgs.\ 8 and 9, we proceed to document and test the relevant steps associated with each step. For example, Section~\ref{section:synthetic} provides relevant details on the construction of the synthetic cohorts, Section~\ref{section:inputs} documents the treatment effects on the inermediate inputs that we use to forecast, and Section~\ref{section:justify}. provides the tests of invariance. These elements were previously relegated to Appendix~\ref{appendix:methodology}, while being crucial.
+\noindent \textit{Response.} We moved the crucial ingredients of Appendix~\ref{appendix:methodology} into the text. In particular, after listing each of the components in our forecasting procedure on pgs.\ 8 and 9, we proceed to document and test the relevant steps associated with each step. For example, we provide relevant details on the construction of the synthetic cohorts, document the treatment effects on the intermediate inputs that we use to forecast, and provide the tests of invariance. These elements were previously relegated to Appendix~\ref{appendix:methodology}, while being crucial.
 
 \noindent \textbf{Referee 3. You don't really offer a new approach to monetize the outcomes. Perhaps this part of the paper can be summarized in a short subsection with a table. The details on how you monetize given your setting may be discussed in an appendix.}
 
@@ -241,15 +241,15 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{In the body of the paper, the authors consistently argue that they test and do not reject the assumptions they make. Looking at the appendices, this seems to be true in many but not all cases. Also, in some of the cases it is true, the sampling error is significant and one cannot say much about the testable implications. The authors should be clear about this.}
 
-\noindent \textit{Response.} This is a good point, and we want to make it very clear given that we want to offer our methodology as a template for the evaluation of other programs. Section~\ref{section:justify} is actually now devoted to justifying the use of $\phi$ as a means of forecasting. The justification relies on the testable implications encapsulated in Equations~\eqref{eq:suff1} and~\eqref{eq:suff2}. As you point out in your report, a lot of relevant material used to justify this was left in the Appendix in the previous version of the paper. In this paper, we discuss the tests of these implications in Table 2. We also elaborate the magnitudes and the standard errors of the tests. In short and related to your question: The tests are not as precise as in Panel (a), but, as before, the coefficients associated with the relevant indicator are relatively low if compared with the average of the variable (average labor income in the experimental and non-experimental sample for males and females is $40,007$ and $24,584$ and  $32,717$ and $24,098$, respectively). Similar statements would hold for the complementary tests in Appendix~\ref{appendix:methodology}.
+\noindent \textit{Response.} This is a good point, and we want to make it very clear given that we want to offer our methodology as a template for the evaluation of other programs. A major part of Section~\ref{section:cbamethodology} is actually now devoted to justifying the use of $\phi$ as a means of forecasting. The justification relies on the testable implications encapsulated in Equations~\eqref{eq:suff1} and~\eqref{eq:suff2}. As you point out in your report, a lot of relevant material used to justify this was left in the Appendix in the previous version of the paper. In this paper, we discuss the tests of these implications in Table 2. We also elaborate the magnitudes and the standard errors of the tests. In short and related to your question: The tests are not as precise as in Panel (a), but, as before, the coefficients associated with the relevant indicator are relatively low if compared with the average of the variable (average labor income in the experimental and non-experimental sample for males and females is $40,007$ and $24,584$ and  $32,717$ and $24,098$, respectively). Similar statements would hold for the complementary tests in Appendix~\ref{appendix:methodology}.
 
 \noindent \textbf{Referee 3. I don't understand how the paper deals with substitution bias. Perhaps it was discussed in one of the appendices (or in \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}) but I missed it. Please clarify what assumptions and data allow you to address this issue.}
 
-\noindent \textit{Response.} Thanks for asking for this clarification, which was missing in the previous draft. To make clear this, we devote a brief section, Section~\ref{section:cbaresultscont}, to this issue. This is more auxiliary to our study because our main interest is to compare treatment to control, so we discuss it as a complementary but not a main result. We acknowledge that dealing with substitution bias relies on further assumptions, which may convolute too much our exposition if presented as a main result.
+\noindent \textit{Response.} Thanks for asking for this clarification, which was missing in the previous draft. To make clear this, we devote a brief section to this issue. This is more auxiliary to our study because our main interest is to compare treatment to control, so we discuss it as a complementary but not a main result in Appendix~\ref{appendix:cbaresultscont} in the revised version. We acknowledge that dealing with substitution bias relies on further assumptions, which may convolute too much our exposition if presented as a main result.
 
 \noindent \textbf{Referee 3. How do you choose predictor variables? It needs to be able to predict a treatment effect, and so the predictor variable should be affected by treatment. I might be wrong but it doesn't look like you are using the subsample of predictors that are affected by treatment? Why not? Why does it make sense to include predictor variables not affected by treatment?}
 
-\noindent \textit{Response.} As detailed on pgs.\ 8 and 9, there are predictors not affected by treatment, $\bm{B}_k$, and predictors affected by treatment, $\bm{X}_{k,a}^d$. The former allow us to gain precision when identifying and estimating $\phi$ in the auxiliary samples. We choose them to be the set of variables that are available across the two samples available at baseline in the experimental sample. The latter are the most important ones, as our whole methodology relies on them as ``mediators'' of treatment. That is precisely what is embedded in Assumption~\ref{ass:summary}. As detailed on pg.\ 11, a variable is a predictor variable: (i) if it is available in the experimental and the non-experimental data; (ii) the support in the non- experimental data contains the support in the experimental data; (iii) mediates or causes labor income; and (iv) is affected by treatment. Section~\ref{section:inputs} documents that these hold for the intermediate inputs that we use.
+\noindent \textit{Response.} As detailed on pgs.\ 8 and 9, there are predictors not affected by treatment, $\bm{B}_k$, and predictors affected by treatment, $\bm{X}_{k,a}^d$. The former allow us to gain precision when identifying and estimating $\phi$ in the auxiliary samples. We choose them to be the set of variables that are available across the two samples available at baseline in the experimental sample. The latter are the most important ones, as our whole methodology relies on them as ``mediators'' of treatment. That is precisely what is embedded in Assumption~\ref{ass:summary}. As detailed on pg.\ 11, a variable is a predictor variable: (i) if it is available in the experimental and the non-experimental data; (ii) the support in the non- experimental data contains the support in the experimental data; (iii) mediates or causes labor income; and (iv) is affected by treatment. Section~\ref{section:cbamethodology} documents that these hold for the intermediate inputs that we use.
 
 \noindent \textbf{Referee 3. What, if any, restrictions are there on the joint distribution of the predicted outcomes in a given period? Are, say, high earners also more likely to be healthy? What are the cross-equation restrictions in the forecasts?}
 
